--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
             box-shadow: 0 0 8px rgba(76, 175, 80, 0.3);
         }
 
+        /* Boutons de suppression */
         .item button {
             background-color: #f44336;
             color: white;
