--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #ffffff; /* Fond blanc initial */
+            background-color: #f4f7f6; /* Fond similaire à l'original */
             display: flex;
             flex-direction: column;
             align-items: center;
