--- a/index.html
+++ b/index.html
@@ -117,11 +117,44 @@
             font-size: 0.9em;
             margin-top: 10px;
         }
+
+        /* Style de la fenêtre modale */
+        .modal {
+            display: none; /* Initialement cachée */
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            justify-content: center;
+            align-items: center;
+            z-index: 999;
+        }
+
+        .modal-content {
+            background-color: white;
+            padding: 20px;
+            border-radius: 10px;
+            text-align: center;
+            width: 300px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        .modal button {
+            margin-top: 10px;
+            background-color: #ff62a1; /* Rose pour bouton */
+        }
+
+        .modal button:hover {
+            background-color: #e0558b;
+        }
+
     </style>
 </head>
 <body>
     <!-- Logo en haut à droite -->
-    <img src="votre-logo.png" alt="Logo" class="logo"> <!-- Remplacez "votre-logo.png" par le chemin réel du logo -->
+    <img src="Images/logo.png" alt="Logo" class="logo"> <!-- Remarquez le chemin vers le dossier Images -->
 
     <h1>Inventaire Poplab</h1>
     
@@ -139,8 +172,19 @@
         <button id="addButton">Ajouter</button>
     </div>
 
+    <!-- Fenêtre modale pour confirmation de suppression -->
+    <div id="myModal" class="modal">
+        <div class="modal-content">
+            <h3>Êtes-vous sûr de vouloir supprimer cet article ?</h3>
+            <button id="confirmDelete">Confirmer</button>
+            <button id="cancelDelete">Annuler</button>
+        </div>
+    </div>
+
     <!-- Script principal pour gérer l'inventaire -->
     <script>
+        let itemToDelete = null;
+
         document.addEventListener("DOMContentLoaded", function () {
             const API_URL = "https://api.jsonbin.io/v3/b/673c9a24e41b4d34e456eab6";
             const MASTER_KEY = "$2a$10$C2IpRYDMnBVS09UziRhWsuPTWBDUAY3bghoT9Fz9cORd/9QFWGhiW";
@@ -215,6 +259,15 @@
 
                 itemDiv.appendChild(quantityInput);
 
+                // Bouton de suppression
+                const deleteButton = document.createElement("button");
+                deleteButton.textContent = "Supprimer";
+                deleteButton.addEventListener("click", () => {
+                    itemToDelete = id;
+                    document.getElementById("myModal").style.display = "flex"; // Ouvre la fenêtre modale
+                });
+                itemDiv.appendChild(deleteButton);
+
                 inventoryDiv.appendChild(itemDiv);
             }
 
@@ -258,8 +311,24 @@
                 saveToJsonBin(); // Sauvegarde dans JSONBin
             }
 
+            // Supprimer un article
+            function deleteItem() {
+                inventoryItems = inventoryItems.filter(item => item.id !== itemToDelete);
+                saveToJsonBin(); // Sauvegarde dans JSONBin
+                loadInventory(); // Recharger l'inventaire
+                document.getElementById("myModal").style.display = "none"; // Fermer la fenêtre modale
+            }
+
             // Événement pour le bouton "Ajouter"
             document.getElementById("addButton").addEventListener("click", addItem);
+
+            // Événement pour confirmer la suppression
+            document.getElementById("confirmDelete").addEventListener("click", deleteItem);
+
+            // Événement pour annuler la suppression
+            document.getElementById("cancelDelete").addEventListener("click", () => {
+                document.getElementById("myModal").style.display = "none"; // Fermer la fenêtre modale sans supprimer
+            });
 
             // Charger les données au démarrage
             loadFromJsonBin();
